# soft-neuro-adapt

./: .gitignore  .gitmodules  LICENSE  README.md  Untitled.ipynb  __init__.py  commit.sh  requirements.txt
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
RAL2017/: CMakeLists.txt  package.xml
farnn/: CMakeLists.txt  README.md  package.xml  train_net.sh  viconsim.txt
farnn/launch/: trainer.launch
farnn/src/: controller.lua  cuda.sh  main.lua  predictor.lua  real_time_predictor.lua  sample.lua  sample.sh  test.lua
farnn/src/data/: data.mat  dataparser.lua
farnn/src/outputs/: testlog.txt  testlog.txt.old
farnn/src/outputs/fastlstm/: log.txt
farnn/src/outputs/fastlstm,backend=cunn/: log.txt  log.txt.eps
farnn/src/outputs/fastlstm,backend=cunn,silent=f/: log.txt  log.txt.eps
farnn/src/outputs/fastlstm,silent=f/: log.txt
farnn/src/ros/: pose_sub.lua  publish_net.lua  service_sub.lua  vicon_sub.lua
farnn/src/utils/: main_FloatMultiArray.lua.bak  model.lua  train.lua  utils.lua
icra/: CMakeLists.txt  __init__.py  package.xml
icra/src/: __init__.py  config.py  main.py  parastimate.py
icra/src/data/: .~lock.tx90.xls#  loadcsv.m  prepro.m  sphero.mat  tx90.xls
icra/src/dynamics/: __init__.py  dynamics_lr_prior.py  dynamics_prior_gmm.py
icra/src/gmr_lib/: __init__.py  em.py  em_init_kmeans.py  gauss_pdf.py  gmr.py
icra/src/gui/: realtime_plotter.py  test_gui.py
icra/src/utils/: __init__.py  algorithm_utils.py  clf_utils.py  data_loader.py  general_utils.py  gmm.py  plot_gmm.py
nn_controller/: CMakeLists.txt  package.xml  ref_pose.csv
nn_controller/config/: traj.yaml
nn_controller/include/nn_controller/: amfc.h  lstm_layer.hpp  nn_controller.h  options.h
nn_controller/launch/: controller.launch
nn_controller/msg/: predictor.msg  valve_control.msg
nn_controller/src/: lstm.cxx  lstm_unit.cxx  nn_controller.cpp
nn_controller/srv/: amfcError.srv  controller.srv  predictor_params.srv
pyrnn/: CMakeLists.txt  __init__.py  package.xml
pyrnn/src/: ProtoTested.ipynb  Untitled.ipynb  __init__.py  cnn_lstm_demo.ipynb  lstm_net_1000.pkl  main.py  main.py~  model.py  pybluez.ipynb  testPYRNN.ipynb
pyrnn/src/.ipynb_checkpoints/: ProtoTested-checkpoint.ipynb  Untitled-checkpoint.ipynb  pybluez-checkpoint.ipynb  testPYRNN-checkpoint.ipynb
pyrnn/src/data/: .~lock.robata.xlsx#  robata.xlsx
pyrnn/src/models/: lstm_net_07-21-17_16::09.pkl  lstm_net_07-22-17_13::41.pkl  lstm_net_07-22-17_13::46.pkl  lstm_net_07-22-17_13::47.pkl  lstm_net_07-22-17_13::48.pkl  lstm_net_1000.pkl  net_607-28-17_09::22.pkl  net_avgloss_6_date_07-28-17_09::58.pkl
pyrnn/src/results/: test_csv  train_csv
pyrnn/src/results.old_07-24-17_13-10/: test_csv
pyrnn/src/results.old_07-24-17_13-17/: test_csv
pyrnn/src/results.old_07-25-17_15-40/: train_csv
pyrnn/src/results.old_07-25-17_15-40/results/: train_csv
pyrnn/src/results.old_07-25-17_16-24/: train_csv
pyrnn/src/results.old_07-25-17_19-38/: train_csv
pyrnn/src/results.old_07-25-17_19-41/: train_csv
pyrnn/src/results.old_07-25-17_19-41/results/: train_csv
pyrnn/src/results.old_07-25-17_20-02/: train_csv
pyrnn/src/results.old_07-25-17_20-05/: train_csv
pyrnn/src/results.old_07-25-17_20-06/: train_csv
pyrnn/src/results.old_07-25-17_21-06/: train_csv
pyrnn/src/results.old_07-25-17_21-09/: train_csv
pyrnn/src/ros/: agent_ros.py  ros_comm.py  rossim.sh
pyrnn/src/save/: train.csv
pyrnn/src/utils/: __init__.py  data_parser.py  early_stopping.py  model.py
soft-neuro-adapt/: CMakeLists.txt  package.xml
vicon_icp/: CMakeLists.txt  README.md  package.xml
vicon_icp/config/: base_pose.yaml
vicon_icp/launch/: vicon_icp.launch
vicon_icp/src/: direction_cosines.cpp  pose_sub.cpp  vicon_icp.cpp
