<?xml version="1.0"?>
<package>
  <name>farnn</name>
  <version>0.0.0</version>
  <description>The farnn package</description>
  <maintainer email="ogunmolu@amazon.com">ogunmolu</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>torch-ros</build_depend>
  <build_depend>torch-moveit</build_depend>

  <run_depend>torch-ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>torch-ros</run_depend>
  <run_depend>torch-moveit</run_depend>
  <export>

  </export>
</package>