<?xml version="1.0"?>
<package>
  <name>pyrnn</name>
  <version>0.0.0</version>
  <description>The pyrnn package</description>
  <maintainer email="patlekano@gmail.com">ogunmolu</maintainer>
  <license>MIT</license>
  
  <run_depend>ensenso</run_depend>
  <build_depend>ensenso</build_depend>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>